<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_directions_run_24"
        android:title="@string/home" />
    <item
        android:id="@+id/achievementsFragment"
        android:icon="@drawable/baseline_emoji_events_24"
        android:title="@string/achieve" />

    <item
        android:id="@+id/statisticsFragment"
        android:icon="@drawable/baseline_show_chart_24"
        android:title="@string/statistics" />

    <item
        android:id="@+id/gpsFragment"
        android:icon="@drawable/baseline_location_on_24"
        android:title="@string/training" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />
</menu>