<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10dp"
    tools:context=".ui.profile.update_profile.recommend.GendersFragment">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tv_skip"
            style="@style/TEXT_TITLE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/skip" />

        <TextView
            android:layout_marginTop="@dimen/_10dp"
            style="@style/TEXT_HEADER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_gender" />

        <TextView
            style="@style/TEXT_TITLE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_amp_stride_length_calculation_nedds_it" />


        <RadioGroup
            android:gravity="center"
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gender"
                android:button="@android:color/transparent"
                android:drawableStart="@drawable/ic_male_30"
                android:paddingHorizontal="@dimen/_10dp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10dp"
                android:background="@drawable/bg_gender"
                android:button="@android:color/transparent"
                android:drawableStart="@drawable/ic_female_30"
                android:paddingHorizontal="@dimen/_10dp"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/radio_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gender"
                android:button="@android:color/transparent"
                android:drawableStart="@drawable/ic_other_30"
                android:paddingHorizontal="@dimen/_10dp"
                android:text="@string/other" />
        </RadioGroup>

    </LinearLayout>
    <Button
        android:id="@+id/btn_continue"
        android:layout_marginBottom="@dimen/_10dp"
        android:backgroundTint="@color/bg_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continues"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>