<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/bottom_nav_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:background="@drawable/border_home_item"
        android:id="@+id/title"
        android:textSize="24sp"
        android:text="@string/choice_your_gender"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup

        android:id="@+id/radio_group"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="10dp"
            android:layout_toStartOf="@+id/ok_button"
            android:id="@+id/cancel_button"
            android:text="@string/cancel"
            android:background="@drawable/custom_button"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="40dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="10dp"
            android:layout_alignParentEnd="true"
            android:id="@+id/ok_button"
            android:text="@string/ok"
            android:background="@drawable/custom_button"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="40dp" />
    </RelativeLayout>

</LinearLayout>
