<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".ui.profile.update_profile.RecommendProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_bgr_recommend"
        tools:context=".ui.profile.update_profile.RecommendProfileActivity">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="96dp"
            android:src="@drawable/step_count_logo" />

        <TextView
            android:id="@+id/tvLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:text="@string/step_count"
            android:textColor="#0288D1"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/blockProfile"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/update_necessary_information"
            android:textColor="@color/color_text_recommend"
            android:textSize="@dimen/text_size_12sp" />

        <RelativeLayout
            android:id="@+id/blockProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/border_block_recommend_profile"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/blockGender"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/gender"
                    android:textColor="@color/color_text_title"
                    android:textSize="@dimen/text_size_14sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/RadioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/radioFeMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />

                    <RadioButton
                        android:id="@+id/radioOther"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other" />
                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/blockStepLength"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/blockGender"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/step_length"
                    android:textColor="@color/color_text_title"
                    android:textSize="@dimen/text_size_14sp"
                    android:textStyle="bold" />

                <RelativeLayout

                    android:id="@+id/blockDialogStepLength"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/border_select_recommend_profile">

                    <TextView
                        android:id="@+id/tvValueStepLength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toStartOf="@+id/iconSelectStepLength"
                        android:text="@string/click_to_select"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/iconSelectStepLength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/baseline_arrow_drop_down_24" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/blockHeight"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/blockStepLength"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/height"
                    android:textColor="@color/color_text_title"
                    android:textSize="@dimen/text_size_14sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/blockDialogHeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/border_select_recommend_profile">

                    <TextView
                        android:id="@+id/tvValueHeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toStartOf="@+id/iconSelectHeight"
                        android:text="@string/click_to_select"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/iconSelectHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/baseline_arrow_drop_down_24" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/blockWeight"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/blockHeight"
                android:layout_alignParentStart="true"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/weight"
                    android:textColor="@color/color_text_title"
                    android:textSize="@dimen/text_size_14sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/blockDialogWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/border_select_recommend_profile">

                    <TextView
                        android:id="@+id/tvValueWeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toStartOf="@+id/iconSelectWeight"
                        android:text="@string/click_to_select"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/iconSelectWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/baseline_arrow_drop_down_24"
                        tools:ignore="ContentDescription" />

                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/blockProfile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/change_later"
            android:textColor="@color/color_text_recommend"
            android:textSize="@dimen/text_size_12sp" />

        <TextView
            android:id="@+id/btnStart"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvLater"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_button_green"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/tvLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSkipSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip_it_save"
                android:textColor="@color/color_text_title"
                android:textSize="@dimen/text_size_12sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/bg_gray" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250sp"
            android:scaleType="centerCrop"
            android:src="@drawable/welcome" />
    </RelativeLayout>

</FrameLayout>